# QME

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  data_save_load.cpp  data_save_load.hpp  defs.hpp  main.cpp  manifold.cpp  manifold.hpp  problem.cpp  problem.hpp  qme.cpp  qme.hpp  random_bearing_generator.cpp  random_bearing_generator.hpp  reduced_quintessential.cpp  reduced_quintessential.hpp  stopwatch.hpp  utils.hpp
MATLAB/: error_essential_algebraic.m  feature_to_pixel.m  features_from_points.m  get_quintessential_from_essential.m  main.m  quintessentialfactory.m  quintessentialqo2factory.m  round_essential_sdp.m  solve_essential_local.m  solve_essential_sdp.m  solve_essential_staircase.m
cmake/: FindEigen3.cmake
